styles.css
/* ... */
body.dark-mode #sound-dropdown {
    color: white;
    background-color: #181818;
    border-color: #555;
}

#sound-dropdown:hover {
    background-color: #f8f8f8;
    
}

body.dark-mode #sound-dropdown:hover {
    background-color: #333;
}

option {
    background-color: white;
}

body.dark-mode option {
    background-color: #181818;
}

/* Auto Refresh Toggle Switch Container */
.toggle-switch {
    display: flex;
    align-items: center;
    gap: 8px;
    padding: 8px;
    border: 1px solid #ddd;
    border-radius: 5px;
    background-color: white;
}

body.dark-mode .toggle-switch {
    background-color: #181818;
    border: 1px solid #555;
}

#auto-refresh-checkbox {
    display: none;
}

/* Auto Refresh Toggle Label */
.toggle-label {
    position: relative;
    display: inline-block;
    width: 40px;
    height: 24px;
    cursor: pointer;
}

/* Auto Refresh Toggle Slider */
.toggle-slider {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    border-radius: 24px;
    transition: background-color 0.2s ease;
}

.toggle-slider::before {
    content: "";
    position: absolute;
    height: 20px;
    width: 20px;
    left: 2px;
    bottom: 2px;
    background-color: white;
    border-radius: 50%;
    transition: transform 0.2s ease;
}

#auto-refresh-checkbox:checked + .toggle-label .toggle-slider {
    background-color: rgb(52, 199, 89);
}

#auto-refresh-checkbox:checked + .toggle-label .toggle-slider::before {
    transform: translateX(16px);
}

body.dark-mode .toggle-slider {
    background-color: #555;
}

/* Auto Refresh Timer Input */
#refresh-time-input {
    font-size: 1em;
    width: 40px;
    /* padding-left: 1em; */
    margin: 0 5px;
    border: 1px solid #ccc;
    border-radius: 5px;
    text-align: right;
    font-family: 'Inter', sans-serif;
}

body.dark-mode #refresh-time-input {
    color: white;
    background-color: #181818;
    border: 1px solid #555;
}

@keyframes flash-border {
    0% {
      border-color: rgb(52, 199, 89);
      box-shadow: 0 0 0 3px rgba(52, 199, 89, 0.33);
    }
    100% {
      border-color: rgb(52, 199, 89, 0.33);
      box-shadow: none;
    }
  }
  
  #refresh-time-input.flash {
    animation: flash-border 1s;
  }

.fetch-time-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.fetch-time {
    font-size: 0.9em;
    color: #666;
}

/* Sound Test Button */
#sound-test-button {
    width: 42px;
    height: 42px;
    padding: 0;
    border-radius: 5px;
    background-color: white;
    border: 1px solid #ddd;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

body.dark-mode #sound-test-button {
    background-color: #181818;
    border: 1px solid #555;
}

#sound-test-button #sound-icon {
    color: black;
}

body.dark-mode #sound-test-button #sound-icon {
    color: white;
}

#sound-test-button:hover {
    background-color: #f8f8f8;
}

body.dark-mode #sound-test-button:hover {
    background-color: #333;
}

/* Custom Tooltip */
#sound-test-button .sound-tooltip {
    visibility: hidden;
    width: 100px;
    color: black;
    background-color: white;
    border: 1px solid #ddd;
    text-align: center;
    border-radius: 5px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -50px;
    opacity: 0;
    transition: opacity 0.3s ease;
}

body.dark-mode #sound-test-button .sound-tooltip {
    color: white;
    background-color: #181818;
    border-color: #555;
}

#sound-test-button:hover .sound-tooltip {
    visibility: visible;
    opacity: 1;
}

/* Theme Toggle Button */
#theme-toggle {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 42px;
    height: 42px;
    padding: 0;
    border-radius: 5px;
    background-color: white;
    border: 1px solid #ddd;
    cursor: pointer;
}

body.dark-mode #theme-toggle {
    background-color: #181818;
    border: 1px solid #555;
}

#theme-toggle svg {
    color: black;
}

body.dark-mode #theme-toggle svg {
    color: white;
}

#theme-toggle:hover {
    background-color: #f8f8f8;
}

body.dark-mode #theme-toggle:hover {
    background-color: #333;
}

/* Footer */
.footer {
    display: flex;
    align-items: baseline;
    justify-content: center;
    padding: 20px;
    gap: 10px;
}

#github-link {
    width: 36px;
    height: auto;
    fill: #666;
}

#github-link:hover {
    fill: black;
}

body.dark-mode #github-link:hover {
    fill: white;
}

#kofi-link {
    width: 36px;
    height: auto;
    opacity: 0.7;
    fill: #666;
}

#kofi-link:hover {
    opacity: 1;
}

#icon-attribution {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 0.9rem;
    color: #666;
}

.product-sku {
    font-size: 0.9em;
    color: #666;
    display: block;
}

/* Responsive Styles */
@media (max-width: 768px) {
    .chart-container {
        max-width: 100%;
        padding: 10px;
    }

    table {
        display: block;
        width: 100%;
        overflow-x: auto;
        white-space: nowrap;
    }

    th, td {
        padding: 8px;
        font-size: 14px;
    }

    .header-container {
        flex-direction: column;
        align-items: center;
    }

    .header-buttons {
        flex-direction: column;
        gap: 5px;
    }

    #locale-dropdown, #sound-dropdown, #theme-toggle, #sound-test-button {
        width: 100%;
        max-width: 300px;
    }
}

@media (max-width: 480px) {
    body {
        padding: 10px;
    }

    .chart-container {
        padding: 10px;
    }

    th, td {
        padding: 6px;
        font-size: 12px;
    }

    .header-buttons {
        margin: 10px 0;
    }
}

